# unofficial-api-for-tube8

./: README.md  pyproject.toml
tube8_api/: __init__.py  api.py  redtube_api.py  tube8.py
tube8_api/modules/: consts.py  errors.py
tube8_api/tests/: test_amatuer.py  test_channel.py  test_pornstar.py  test_search.py  test_video.py
